# MARCUS

./: .gitignore  LICENSE  README.md  pyproject.toml
data/templates/: cmr_templates.json  ecg_templates.json  echo_templates.json
docs/: architecture.md  evaluation.md
docs/model_cards/: cmr.md  ecg.md  echo.md
scripts/: b_clean_filter.py  build_dataset.py  compute_statistics.py  create_demo_video.py  create_presentation.py  download_checkpoints.py  run_inference_batch.py  start_demo.sh
src/video_chat_ui/: __init__.py  app.py  cli.py  config.py  demo.py  demo_examples.py
src/video_chat_ui/eval/: __init__.py  cli.py  judge.py  per_category.py  prompts.py  run_batch.py  schema.py
src/video_chat_ui/orchestrator/: __init__.py  client.py  mirage.py  orchestrator.py
src/video_chat_ui/preprocessing/: __init__.py  cmr_grid.py  config.py  dicom_processor.py  ecg.py  ecg_xml.py  echo_grid.py  pipeline.py
src/video_chat_ui/static/: app.js  index.template.html  style.css
tests/: __init__.py  test_ecg_xml.py  test_orchestrator.py  test_preprocessing_ecg_smoke.py  test_statistics.py
training/: README.md  dataset_info.json  run_training.sh
training/stage1_pretrain/: cmr_pretrain.yaml  ecg_pretrain.yaml  echo_pretrain.yaml
training/stage2_sft/: cmr_sft.yaml  ecg_sft.yaml  echo_sft.yaml
training/stage3_grpo/: reward.py  run_cmr_grpo.sh  run_ecg_grpo.sh  run_echo_grpo.sh
